--- a/kubernetes/osfamilymap.yaml
+++ b/kubernetes/osfamilymap.yaml
@@ -31,9 +31,9 @@ Debian:
       use_upstream_repo: false
   client:
     pkg:
-      use_upstream_archive: false
+      use_upstream_archive: true
       use_upstream_binary: false
-      use_upstream_repo: true
+      use_upstream_repo: false
   minikube:
     pkg:
       use_upstream_binary: true
