--- a/kubernetes/defaults.yaml
+++ b/kubernetes/defaults.yaml
@@ -8,6 +8,7 @@ kubernetes:
     - client
     - node
     - devspace
+    - istio
     - kubebuilder
     - k3s
     - kind
@@ -243,6 +244,21 @@ kubernetes:
         name: kind
         source: null  # set in map.jinja
         source_hash: 781c3db479b805d161b7c2c7a31896d1a504b583ebfcce8fcd49538c684d96bc
+  istio:
+    version: 1.6.4
+    pkg:
+      name: istio
+      use_upstream_archive: true
+      suffix: tar.gz
+      commands:
+        - istioctl
+      archive:
+        path: null  # set in map.jinja
+        uri: 'https://github.com/istio/istio/releases/download'
+        source_hash: null # set in map.jinja
+        trim_output: true
+        enforce_toplevel: false
+        options: '--strip-components=1'
 
   kubebuilder:
     version: 2.3.1
