--- a/pillar.example
+++ b/pillar.example
@@ -40,6 +40,8 @@ kubernetes:
     version: 0.12.0
   kind:
     version: 0.8.1
+  linkerd2:
+    version: 20.7.1
   istio:
     version: 1.6.4
   kubebuiler:
