--- a/.travis.yml
+++ b/.travis.yml
@@ -70,8 +70,8 @@ jobs:
     # the `platforms` defined in `kitchen.yml`
     - env: INSTANCE=default-debian-10-master-py3
     - env: INSTANCE=default-ubuntu-1804-master-py3
-    # env: INSTANCE=default-centos-8-master-py3
-    # env: INSTANCE=default-fedora-31-master-py3
+    - env: INSTANCE=redhat-centos-8-master-py3
+    - env: INSTANCE=redhat-fedora-31-master-py3
     - env: INSTANCE=default-opensuse-leap-151-master-py3
     # - env: INSTANCE=default-amazonlinux-2-master-py3
     # - env: INSTANCE=default-debian-10-3000-2-py3
