--- a/test/integration/redhat/inspec.yml
+++ b/test/integration/redhat/inspec.yml
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 # vim: ft=yaml
 ---
-name: default
+name: redhat
 title: kubernetes formula
 maintainer: SaltStack Formulas
 license: Apache-2.0
