--- a/kubernetes/osarchmap.yaml
+++ b/kubernetes/osarchmap.yaml
@@ -12,7 +12,7 @@
 ---
 arm64:
   arch: arm64
-  tools:
+  devtools:
     kubectx:
       pkg:
         archive:
@@ -114,7 +114,7 @@ armv6l:
 
 armhf:
   arch: armhf
-  tools:
+  devtools:
     kubectx:
       pkg:
         archive:
@@ -126,7 +126,7 @@ armhf:
 
 armv7l:
   arch: armv7l
-  tools:
+  devtools:
     kubectx:
       pkg:
         archive:
