--- a/kubernetes/osfamilymap.yaml
+++ b/kubernetes/osfamilymap.yaml
@@ -58,9 +58,9 @@ RedHat:
       use_upstream_repo: false
   client:
     pkg:
-      use_upstream_archive: false
+      use_upstream_archive: true
       use_upstream_binary: false
-      use_upstream_repo: true
+      use_upstream_repo: false
 
 Suse: {}
 Gentoo: {}
@@ -138,22 +138,19 @@ Windows:
       archive:
         source_hash: cecf094c3d8f6c55236cf02c7e4c3916ca0e5c430ef5dff647665a2a16a20c8c
   devtools:
-    kubectx:
-      pkg:
+    pkg:
+      kubectx:
         suffix: zip
         archive:
           source_hash: 50da8ffd2ac9ca7f41c8aa6bf47a7fbd91d17603827b24267b8618fc30e7923f  # x86_64
-    kubens:
-      pkg:
+      kubens:
         suffix: zip
         archive:
           source_hash: bd60e0bd71ef0c0d628dcf09600902e2d67998a29cc5998a404b200fe2d98de8  # x86_64
-    cue:
-      pkg:
+      cue:
         archive:
           source_hash: b705cd47d3d568b231ed94c8d3e947f9e1d9b54eab0483d9a00b1c6645be32e9  # x86_64
-    audit2rbac:
-      pkg:
+      audit2rbac:
         archive:
           source_hash: 57e1b6f108141da818eb29ad5755d386f56be067737302fabfa092e335c6ce57
 
@@ -210,19 +207,16 @@ MacOS:
       use_upstream_binary: true
       use_upstream_script: false
   devtools:
-    kubectx:
-      pkg:
+    pkg:
+      kubectx:
         archive:
           source_hash: a46c5cf1f6ba8f6aa4dc75fc5a7086d294a28a19cf2fbbf18ac54108a7f713e1  # x86_64
-    kubens:
-      pkg:
+      kubens:
         archive:
           source_hash: 4ae390ba702d57355d5fb9f2bba04c9b00ae39f740c59044c2d39cd6bfa0ab18  # x86_64
-    cue:
-      pkg:
+      cue:
         archive:
           source_hash: 2b2038feaa2732f25bfb8c563627f990fa890bc654acee34c915bafa5279bc04  # x86_64
-    audit2rbac:
-      pkg:
+      audit2rbac:
         archive:
           source_hash: e89d9e7e6e68d7fdf135ab0912f57afda0fea07931ac443a367d35671f83d1b1
